# PoV-generator

./: .gitignore  README.md  business_to_ts.md  pyproject.toml  run_workspace.ps1  stage_gate_1_spec.md
specs/: 00_overview.md  01_template_registry.md  02_task_store.md  03_template_semantics.md  04_problem_state.md  05_planning_coordinator.md  06_artifact_context.md  07_execution_runtime.md  08_validation_governance.md  09_domain_packs.md  10_ui_workspace_architecture.md  11_ui_design_system.md  12_ui_components_and_patterns.md  13_ui_realtime_and_m10_requirements.md  PoV.md  answer.md  ТЗ Архитектура.md
specs/schemas/: task.schema.json  template.schema.json
src/pov_generator/: __init__.py  __main__.py
stage_gate_1/: EXAMPLE.md  README.md
stage_gate_1/domain_packs/: _schema.yaml  rag_v1.yaml  simple_ml_v1.yaml
stage_gate_1/reference/: artifacts.md  verification.md
stage_gate_1/task_templates/: 01_text_processing.yaml  02_meaning_analysis.yaml  03_typed_mentions.yaml  04_gap_analysis.yaml  05_user_interaction.yaml  06_inventory.yaml  07_requirements.yaml  08_architecture.yaml  09_document.yaml
stage_gate_1/workflow/: biz_to_tz_v1.yaml  escalation_policy.md
templates/recipes/: common.build_requirements_spec.yaml
templates/templates/: common.alternatives_scan.yaml  common.goal_clarification.yaml  common.requirements_spec_generation.yaml  common.requirements_spec_review.yaml  common.user_story_scan.yaml
templates/vocabularies/: artifact_roles.yaml  domains.yaml  gap_types.yaml  (+2 more)
tests/: test_env_loading.py  test_foundation.py  test_m5_m8.py  test_m9_api.py
(+89 files in other folders)
